# shipyard-full

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-cli.yml
.playwright-cli/: page-2026-04-17T15-54-34-558Z.yml  page-2026-04-17T15-54-45-833Z.yml  page-2026-04-17T15-55-11-633Z.yml  page-2026-04-17T15-55-19-518Z.yml  page-2026-04-17T15-55-26-204Z.yml  page-2026-04-17T15-55-34-286Z.yml
apps/web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js
apps/web/src/: app.d.ts  app.html
apps/web/src/lib/: styles.css
apps/web/src/lib/api/: client.ts  session.ts  types.ts
apps/web/src/lib/components/: AppShell.svelte  StatusBadge.svelte
apps/web/src/lib/components/marketing/: MarketingBands.svelte  MarketingCli.svelte  MarketingClosing.svelte  (+7 more)
apps/web/src/lib/ndk/: client.ts  config.ts
apps/web/src/lib/nostr/: blossom.ts  drafts.ts  local-drafts.ts  signing.ts
apps/web/src/lib/styles/: base.css  composer.css  forms.css  layout.css  lists.css  responsive.css
apps/web/src/lib/utils/: deterministic-gradient.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/(app)/: +layout.svelte
apps/web/src/routes/(marketing)/: +layout.svelte  +page.svelte
apps/web/src/routes/drafts/: +page.svelte
apps/web/src/routes/dvm/: +page.svelte
apps/web/src/routes/proposals/: +page.svelte
apps/web/src/routes/published/: +page.svelte
apps/web/src/routes/queues/: +page.svelte
apps/web/src/routes/scheduled/: +page.svelte
apps/web/src/routes/settings/: +page.svelte
apps/web/src/routes/write/: +page.svelte
apps/web/tests/: dashboard.spec.ts  navigation.spec.ts  proposals.spec.ts  queues.spec.ts  settings.spec.ts  write.spec.ts
apps/web/tests/helpers/: api-mock.ts
crates/shipyard-api/: Cargo.toml
crates/shipyard-api/src/: main.rs  routes.rs
crates/shipyard-api/src/routes/: accounts.rs  auth.rs  delegates.rs  devices.rs  dvm.rs  models.rs  proposals.rs  publish_items.rs  queues.rs  relays.rs
crates/shipyard-api/src/routes/proposals/: helpers.rs  signing.rs
crates/shipyard-api/src/routes/publish_items/: model.rs
crates/shipyard-api/tests/: route_contract.rs  schema_contract.rs
crates/shipyard-cli/: Cargo.toml
crates/shipyard-cli/src/: client.rs  config.rs  main.rs  output.rs
crates/shipyard-cli/src/commands/: accounts.rs  auth.rs  delegates.rs  devices.rs  dvm.rs  media.rs  mod.rs  proposals.rs  publish.rs  queues.rs  relays.rs
crates/shipyard-core/: Cargo.toml
crates/shipyard-core/src/: auth.rs  dvm.rs  event.rs  lib.rs  model.rs  nip04.rs  nip44.rs  queue.rs  state.rs
crates/shipyard-core/src/dvm/: tests.rs
crates/shipyard-dvm/: Cargo.toml
crates/shipyard-dvm/src/: feedback.rs  main.rs  processing.rs  processing_tests.rs  relay.rs  subscription.rs  subscription_tests.rs
crates/shipyard-dvm/src/processing/: failure.rs
crates/shipyard-mobile-core/: Cargo.toml
crates/shipyard-mobile-core/src/: api.rs  blossom.rs  draft.rs  ffi.rs  lib.rs  validation.rs
crates/shipyard-worker/: Cargo.toml
crates/shipyard-worker/src/: backoff.rs  main.rs  publish.rs  relay.rs
crates/shipyard-worker/tests/: worker_contract.rs
deploy/: docker-compose.yml  rust.Dockerfile  web.Dockerfile
design/: color-exploration-v2.html  color-exploration.html  design-system.md  landing-page-copy.md  landing-page-v2.html  landing-page-v3.html  landing-page.html  voice-and-copy.md
docs/: M10-GAP-ANALYSIS.md  README.md  api-contract.md  implementation-plan.md  legacy-system-analysis.md  legacy-technical-spec.md  mobile-spec.md  out-of-scope-and-future.md  product-spec.md  protocols-and-apis.md  security-review.md  shipyard-cli-and-skill-spec.md  state-machine-spec.md  technical-architecture-spec.md  template-integration-spec.md
docs/plans/: 2026-04-19-onboarding-design.md
docs/runbooks/: backup-restore.md  development.md  local-compose-e2e-smoke.md  postgres-migration-backup-restore.md  security-review-checklist.md
migrations/: 0001_initial.sql  0002_dvm_idempotency.sql  0003_dvm_failure_handling.sql  0004_dvm_processing_recovery.sql  0005_session_ip_binding.sql
mobile/android/: README.md
mobile/ios/: README.md
scripts/: local-compose-smoke.sh
skills/shipyard-cli/: README.md  SKILL.md
(+44 files in other folders)
