[package]
name = "shipyard-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "shipyard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
shipyard-core = { path = "../shipyard-core" }
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
