[package]
name = "shipyard-mobile-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
shipyard-core = { path = "../shipyard-core" }
thiserror.workspace = true
uuid.workspace = true
